[package]
name = "core_helpers"
description = "Bunch of @parsify/core helpers, powered by Rust and WASM."
version = "0.0.3"
authors = ["Antoni Kepinski <a@kepinski.me>"]
license = "MIT"
repository = "https://github.com/parsify-dev/core-helpers"
edition = "2018"
publish = false

[dependencies]
wasm-bindgen = "0.2"
regex = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
