[package]
name = "evaluator"
description = "Experimental expression evaluator for @parsify/math, powered by Rust & WASM."
version = "0.0.1"
authors = ["Antoni Kepinski <a@kepinski.me>"]
license = "MIT"
repository = "https://github.com/parsify-dev/evaluator"
edition = "2018"
publish = false

[dependencies]
wasm-bindgen = "0.2"
meval = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
