[package]
name = "core_helpers"
description = "Bunch of @parsify/core helpers, written in Rust"
version = "0.0.1"
authors = ["Antoni Kepinski <a@kepinski.me>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "core_helpers"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4"

[dependencies]
neon = "0.4"
regex = "1"
